# IxEngine

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md  build.bat  run_anchor.bat
nets/: ix-gen1.nnue  ix-gen2.nnue
src/: bitboard.cpp  bitboard.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  tt.cpp  tt.h  types.h  zobrist.cpp  zobrist.h
tools/: datagen.py  match.py  modes_elo.py  play.py  selfplay.py  sprt.py  train_nnue.py
tools/anchor/: README.md  anchors.json  book.json  history.csv  run_anchor.py  solve.py
tools/anchor/runs/: 20260625-012727_v1.0-gen2.txt
tools/webui/: index.html  server.py
